--- a/index.html
+++ b/index.html
@@ -5,8 +5,139 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
+    <header class="page-header">
+      <nav class="navigation">
+        <a class="logo">
+          <img class="navigation-logo" alt="Логотип небольшого городка «Седона»" src="#">
+        </a>
+        <ul class="navigation-list">
+          <li class="navigation-item">
+            <a class="navigation-link navigation-link-current" href="#">Главная</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="about.html">О Седоне</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="catalog.html">Гостиницы</a>
+          </li>
+        </ul>
+        <ul class="navigation-list navigation-user">
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              <span class="visually-hidden">
+                Поиск
+              </span>
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              <span class="visually-hidden">
+                Избранные
+              </span>
+            </a>
+          </li>
+        </ul>
+        <button class="navigation-booking" type="button">
+          <span class="booking">Хочу сюда!</span>
+        </button>
+      </nav>
+    </header>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
+    <main class="main-index">
+      <h1 class="visually-hidden">Туризм по городу «Седона»</h1>
+      <article class="greeting">
+        <h2 class="greeting-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
+        <p class="greeting-description">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+      </article>
+      <article class="blog-article blog-article-1">
+        <h3 class="blog-article-title">Настоящий городок</h3>
+        <p class="blog-article-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+        <img class="blog-article-img" alt="Городок Седона" src="#">
+      </article>
+      <h2 class="visually-hidden">Преимущества</h2>
+      <ul class="advantages">
+        <li class="advantages-item">
+          <h3 class="advantages-title">Небольшая площадь</h3>
+          <p class="advantages-description">Все достопримечательности находятся очень близко</p>
+        </li>
+        <li class="advantages-item advantages-item-background">
+          <h3 class="advantages-title">Красивая дорога</h3>
+          <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+        </li>
+        <li class="advantages-item">
+          <h3 class="advantages-title">Мало туристов</h3>
+          <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
+        </li>
+      </ul>
+      <article class="blog-article blog-article-2">
+        <h3 class="blog-article-title">Там есть мост дьявола</h3>
+        <p class="blog-article-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+        </div>
+        <img class="blog-article-img" alt="Пейзаж Седоны" src="#">
+      </article>
+      <article class="greeting">
+        <h2 class="greeting-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
+        <p class="greeting-description">Опытный персонал и качественное обслуживание!</p>
+      </article>
+      <h2 class="visually-hidden">Больше преимуществ</h2>
+      <ul class="advantages">
+        <li class="advantages-item advantages-item-background">
+          <h3 class="advantages-title">Жильё</h3>
+          <p class="advantages-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+          <img class="advantages-icons" alt="Домик" src="#">
+        </li>
+        <li class="advantages-item">
+          <h3 class="advantages-title">Еда</h3>
+          <p class="advantages-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+          <img class="advantages-icons" alt="Вкусняшка" src="#">
+        </li>
+        <li class="advantages-item advantages-item-background">
+          <h3 class="advantages-title">Сувениры</h3>
+          <p class="advantages-description">Не только китайского, но и настоящего местного производства!</p>
+          <img class="advantages-icons" alt="Подарочек" src="#">
+        </li>
+      </ul>
+      <section class="suggestion">
+        <h2>Заинтересовались?</h2>
+        <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <button class="registration" type="button">
+          <span class="regestration-text">Поиск гостиницы в Седоне</span>
+        </button>
+      </section>
+      <section class="newsletter">
+        <h2 class="newsletter-title">Подпишитесь на рассылку</h2>
+        <p class="newsletter-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
+        <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
+          <input type="text" id="newsletter-mail" name="newsletter-mail" placeholder="Ваш e-mail">
+          <button class="newsletter-button" type="submit">Подписаться</button>
+      </section>
+    </main>
 
+    <footer class="page-footer">
+      <ul class="social-list">
+        <li class="social-item">
+          <a class="social-button" href="#">
+            <span class="visually-hidden">Вконтакте</span>
+            <img class="social-icon-vk" alt="Вконтакте" src="#">
+          </a>
+        </li>
+        <li class="social-item">
+          <a class="social-button" href="#">
+            <span class="visually-hidden">Телеграм</span>
+            <img class="social-icon-telegram" alt="Телеграм" src="#">
+          </a>
+        </li>
+        <li class="social-item">
+          <a class="social-button" href="#">
+            <span class="visually-hidden">Ютуб</span>
+            <img class="social-icon-youtube" alt="Ютуб" src="#">
+          </a>
+        </li>
+      </ul>
+      <a class="footer-contacts-address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+      <a href="#">
+        <img class="footer-logo-copyright" alt="Логотип создателя вёрстки" src="#">
+      </a>
+    </footer>
   </body>
 </html>
