Добавляет разметку навигации каталога
Также микро правки в index.html с добавлением ссылки логотипу

--- a/catalog.html
+++ b/catalog.html
@@ -6,6 +6,44 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
-    <p>hello world</p>
+    <header class="page-header">
+      <nav class="navigation">
+        <a class="logo" href="#">
+          <img class="navigation-logo" alt="Логотип небольшого городка «Седона»" src="#">
+        </a>
+        <ul class="navigation-list">
+          <li class="navigation-item">
+            <a class="navigation-link" href="index.html">Главная</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="about.html">О Седоне</a>
+          </li>
+          <li class="navigation-item navigation-link-current">
+            <a class="navigation-link" href="#">Гостиницы</a>
+          </li>
+        </ul>
+        <ul class="navigation-list navigation-user">
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              <span class="visually-hidden">
+                Поиск
+              </span>
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              <span class="visually-hidden">
+                Избранные
+              </span>
+            </a>
+          </li>
+          <li class="navigation-booking">
+            <a class="booking" href="#">
+              Хочу сюда!
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </header>
   </body>
 </html>
