--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header class="page-header">
       <nav class="navigation">
-        <a class="logo">
+        <a class="logo" href="#">
           <img class="navigation-logo" alt="Логотип небольшого городка «Седона»" src="#">
         </a>
         <ul class="navigation-list">
@@ -46,7 +46,7 @@
       </nav>
     </header>
 
-    <main class="main-index">
+    <main class="page-main">
       <h1 class="visually-hidden">Туризм по городу «Седона»</h1>
       <article class="greeting">
         <h2 class="greeting-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
