--- a/catalog.html
+++ b/catalog.html
@@ -117,6 +117,150 @@
           <button class="filter-button" type="submit">Сбросить</button>
         </form>
       </section>
+      <section class="results">
+        <h2>Найдено гостиниц: <span class="results-number">38</span></h2>
+        <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="post">
+          <select size="1" aria-label="Сортировка">
+            <option selected value="s1">Сначала дешёвые</option>
+            <option value="s2">Сначала дорогие</option>
+            <option value="s3">Сначала популярные</option>
+          </select>
+        </form>
+        <ul class="layout-list">
+          <li>
+            <a class="layout-item layout-item-current" href="#">
+              <span class="visually-hidden">Показать карточки</span>
+            </a>
+          </li>
+          <li>
+            <a class="layout-item" href="#">
+              <span class="visually-hidden">Показать более подробно</span>
+            </a>
+          </li>
+          <li>
+            <a class="layout-item" href="#">
+              <span class="visually-hidden">Показать список</span>
+            </a>
+          </li>
+        </ul>
+      </section>
+      <section class="product-cards">
+        <h2 class="visually-hidden">Список вариантов:</h2>
+        <ul class="product-cards-list">
+          <li class="product-item">
+            <a class="product-card-link" href="#">
+              <img class="product-card-image" src="#" alt="">
+              <h3>Amara Resort & Spa</h3>
+            </a>
+            <div class="product-card-description-wrapper">
+              <p>Гостиница</p>
+              <b>От 4000 ₽</b>
+              <a class="description-card-button" href="#">Подробнее</a>
+              <a class="description-card-button" href="#">В избранное</a>
+              <ul class="stars-count">
+                <li>
+                  <img class="stars" src="#" alt="1">
+                </li>
+                <li>
+                  <img class="stars" src="#" alt="2">
+                </li>
+                <li>
+                  <img class="stars" src="#" alt="3">
+                </li>
+                <li>
+                  <img class="stars" src="#" alt="4">
+                </li>
+              </ul>
+              <a class="rating" href="#">Рейтинг: 8,5</a>
+            </div>
+          </li>
+          <li class="product-item">
+            <a class="product-card-link" href="#">
+              <img class="product-card-image" src="#" alt="">
+              <h3>Villas at Poco Diablo</h3>
+            </a>
+            <div class="product-card-description-wrapper">
+              <p>Гостиница</p>
+              <b>От 5000 ₽</b>
+              <a class="description-card-button" href="#">Подробнее</a>
+              <a class="description-card-button" href="#">В избранное</a>
+              <ul class="stars-count">
+                <li>
+                  <img class="stars" src="#" alt="1">
+                </li>
+                <li>
+                  <img class="stars" src="#" alt="2">
+                </li>
+                <li>
+                  <img class="stars" src="#" alt="3">
+                </li>
+                <li>
+                  <img class="stars" src="#" alt="4">
+                </li>
+              </ul>
+              <a class="rating" href="#">Рейтинг: 9,2</a>
+            </div>
+          </li>
+          <li class="product-item">
+            <a class="product-card-link" href="#">
+              <img class="product-card-image" src="#" alt="">
+              <h3>Desert Quail Inn</h3>
+            </a>
+            <div class="product-card-description-wrapper">
+              <p>Гостиница</p>
+              <b>От 2500 ₽</b>
+              <a class="description-card-button" href="#">Подробнее</a>
+              <a class="description-card-button" href="#">В избранное</a>
+              <ul class="stars-count">
+                <li>
+                  <img class="stars" src="#" alt="1">
+                </li>
+                <li>
+                  <img class="stars" src="#" alt="2">
+                </li>
+                <li>
+                  <img class="stars" src="#" alt="3">
+                </li>
+              </ul>
+              <a class="rating" href="#">Рейтинг: 6,9</a>
+            </div>
+          </li>
+          <li class="product-item">
+            <a class="product-card-link" href="#">
+              <img class="product-card-image" src="#" alt="">
+              <h3>GreenTree Inn</h3>
+            </a>
+            <div class="product-card-description-wrapper">
+              <p>Гостиница</p>
+              <b>От 1500 ₽</b>
+              <a class="description-card-button" href="#">Подробнее</a>
+              <a class="description-card-button" href="#">В избранное</a>
+              <ul class="stars-count">
+                <li>
+                  <img class="stars" src="#" alt="1">
+                </li>
+                <li>
+                  <img class="stars" src="#" alt="2">
+                </li>
+              </ul>
+              <a class="rating" href="#">Рейтинг: 5,0</a>
+            </div>
+          </li>
+        </ul>
+      </section>
+      <section class="page-switch">
+        <a class="switch-button switch-button-current">1</a>
+
+        <a class="switch-button" href="#">2</a>
+
+        <a class="switch-button" href="#">3</a>
+
+        <a class="switch-button" href="#">4</a>
+
+        <a class="switch-button" href="#">...</a>
+
+        <a class="switch-button" href="#">10</a>
+      </section>
     </main>
 
     <footer class="page-footer">
