Добавляет разметку рассылки

--- a/catalog.html
+++ b/catalog.html
@@ -261,6 +261,14 @@
 
         <a class="switch-button" href="#">10</a>
       </section>
+      <section class="newsletter">
+        <h2 class="newsletter-title">Подпишитесь на рассылку</h2>
+        <p class="newsletter-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
+        <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
+          <input type="email" id="newsletter-mail" name="newsletter-mail" placeholder="Ваш e-mail">
+          <button class="newsletter-button" type="submit">Подписаться</button>
+        </form>
+      </section>
     </main>
 
     <footer class="page-footer">
