Добавляет разметку футера

--- a/catalog.html
+++ b/catalog.html
@@ -272,6 +272,30 @@
     </main>
 
     <footer class="page-footer">
+      <ul class="social-list">
+        <li class="social-item">
+          <a class="social-button" href="#">
+            <span class="visually-hidden">Вконтакте</span>
+            <img class="social-icon-vk" alt="Вконтакте" src="#">
+          </a>
+        </li>
+        <li class="social-item">
+          <a class="social-button" href="#">
+            <span class="visually-hidden">Телеграм</span>
+            <img class="social-icon-telegram" alt="Телеграм" src="#">
+          </a>
+        </li>
+        <li class="social-item">
+          <a class="social-button" href="#">
+            <span class="visually-hidden">Ютуб</span>
+            <img class="social-icon-youtube" alt="Ютуб" src="#">
+          </a>
+        </li>
+      </ul>
+      <a class="footer-contacts-address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+      <a href="https://htmlacademy.ru/">
+        <img class="footer-logo-copyright" alt="Логотип создателя вёрстки" src="#">
+      </a>
     </footer>
   </body>
 </html>
