--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="page-header">
       <nav class="navigation">
         <a class="logo" href="#">
-          <img class="navigation-logo" alt="Логотип небольшого городка «Седона»" src="#">
+          <img class="navigation-logo" alt="Логотип небольшого городка «Седона»" src="images/logo.svg" width="138" height="64">
         </a>
         <ul class="navigation-list">
           <li class="navigation-item">
@@ -50,6 +50,7 @@
 
     <main class="page-main">
       <h1 class="visually-hidden">Туризм по городу «Седона»</h1>
+      <img alt="welcome to the gorgeous Sedona"src="images/preview-header.svg" width="458" height="352">
       <article class="greeting">
         <h2 class="greeting-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
         <p class="greeting-description">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
@@ -57,7 +58,7 @@
       <article class="blog-article blog-article-1">
         <h3 class="blog-article-title">Настоящий городок</h3>
         <p class="blog-article-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-        <img class="blog-article-img" alt="Городок Седона" src="#">
+        <img class="blog-article-img" alt="Городок Седона" src="images/article-1.jpg" width="800" height="385">
       </article>
       <h2 class="visually-hidden">Преимущества</h2>
       <ul class="advantages">
@@ -78,7 +79,7 @@
         <h3 class="blog-article-title">Там есть мост дьявола</h3>
         <p class="blog-article-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
         </div>
-        <img class="blog-article-img" alt="Пейзаж Седоны" src="#">
+        <img class="blog-article-img" alt="Пейзаж Седоны" src="images/article-2.jpg" width="800" height="385">
       </article>
       <article class="greeting">
         <h2 class="greeting-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
@@ -121,25 +122,22 @@
         <li class="social-item">
           <a class="social-button" href="#">
             <span class="visually-hidden">Вконтакте</span>
-            <img class="social-icon-vk" alt="Вконтакте" src="#">
           </a>
         </li>
         <li class="social-item">
           <a class="social-button" href="#">
             <span class="visually-hidden">Телеграм</span>
-            <img class="social-icon-telegram" alt="Телеграм" src="#">
           </a>
         </li>
         <li class="social-item">
           <a class="social-button" href="#">
             <span class="visually-hidden">Ютуб</span>
-            <img class="social-icon-youtube" alt="Ютуб" src="#">
           </a>
         </li>
       </ul>
       <a class="footer-contacts-address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
       <a href="https://htmlacademy.ru/">
-        <img class="footer-logo-copyright" alt="Логотип создателя вёрстки" src="#">
+        <img class="footer-logo-copyright" alt="Логотип создателя вёрстки" src="images/logo-htmlacademy.svg" width="115" height="33">
       </a>
     </footer>
   </body>
