:heavy_check_mark: Сборка #2

--- a/2/catalog.html
+++ b/2/catalog.html
@@ -10,7 +10,7 @@
     <header class="page-header">
       <nav class="navigation">
         <a class="logo" href="#">
-          <img class="navigation-logo" alt="Логотип небольшого городка «Седона»" src="#">
+          <img class="navigation-logo" alt="Логотип небольшого городка «Седона»" src="images/logo.svg" width="138" height="64">
         </a>
         <ul class="navigation-list">
           <li class="navigation-item">
@@ -150,7 +150,7 @@
         <ul class="product-cards-list">
           <li class="product-item">
             <a class="product-card-link" href="#">
-              <img class="product-card-image" src="#" alt="">
+              <img class="product-card-image" alt="Первый вариант гостиницы" src="images/hotel-1.jpg" width="300" height="212">
               <h3>Amara Resort & Spa</h3>
             </a>
             <div class="product-card-description-wrapper">
@@ -177,7 +177,7 @@
           </li>
           <li class="product-item">
             <a class="product-card-link" href="#">
-              <img class="product-card-image" src="#" alt="">
+              <img class="product-card-image" alt="Второй вариант гостиницы" src="images/hotel-2.jpg" width="300" height="212">
               <h3>Villas at Poco Diablo</h3>
             </a>
             <div class="product-card-description-wrapper">
@@ -204,7 +204,7 @@
           </li>
           <li class="product-item">
             <a class="product-card-link" href="#">
-              <img class="product-card-image" src="#" alt="">
+              <img class="product-card-image" alt="Третий вариант гостиницы" src="images/hotel-3.jpg" width="300" height="212">
               <h3>Desert Quail Inn</h3>
             </a>
             <div class="product-card-description-wrapper">
@@ -228,7 +228,7 @@
           </li>
           <li class="product-item">
             <a class="product-card-link" href="#">
-              <img class="product-card-image" src="#" alt="">
+              <img class="product-card-image" alt="Четвертый вариант гостиницы" src="images/hotel-4.jpg" width="300" height="212">
               <h3>GreenTree Inn</h3>
             </a>
             <div class="product-card-description-wrapper">
@@ -295,7 +295,7 @@
       </ul>
       <a class="footer-contacts-address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
       <a href="https://htmlacademy.ru/">
-        <img class="footer-logo-copyright" alt="Логотип создателя вёрстки" src="#">
+        <img class="footer-logo-copyright" alt="Логотип создателя вёрстки" src="images/logo-htmlacademy.svg" width="115" height="33">
       </a>
     </footer>
   </body>
