Добавил базовые стили хедеру и превью бэкграунду
Также визуальные незначительные правки в стилях

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </a>
           </li>
           <li class="navigation-booking">
-            <a class="booking" href="#">
+            <a class="booking button" href="#">
               Хочу сюда!
             </a>
           </li>
@@ -50,11 +50,13 @@
     </header>
 
     <main class="page-main">
-      <h1 class="visually-hidden">Туризм по городу «Седона»</h1>
-      <img alt="welcome to the gorgeous Sedona"src="images/preview-header.svg" width="458" height="352">
+      <div class="preview-background">
+        <h1 class="visually-hidden">Туризм по городу «Седона»</h1>
+        <img alt="welcome to the gorgeous Sedona"src="images/preview-header.svg" width="458" height="352">
+      </div>
       <article class="greeting">
         <h2 class="greeting-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
-        <p class="greeting-description">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+        <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
       </article>
       <article class="blog-article blog-article-1">
         <h3 class="blog-article-title">Настоящий городок</h3>
