--- a/index.html
+++ b/index.html
@@ -55,32 +55,32 @@
         <img alt="welcome to the gorgeous Sedona"src="images/preview-header.svg" width="458" height="352">
       </div>
       <article class="greeting">
-        <h2 class="greeting-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
+        <h2>Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
         <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
       </article>
       <article class="blog-article blog-article-1">
-        <h3 class="blog-article-title">Настоящий городок</h3>
-        <p class="blog-article-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+        <h3>Настоящий городок</h3>
+        <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
         <img class="blog-article-img" alt="Городок Седона" src="images/article-1.jpg" width="800" height="385">
       </article>
       <h2 class="visually-hidden">Преимущества</h2>
       <ul class="advantages">
         <li class="advantages-item">
-          <h3 class="advantages-title">Небольшая площадь</h3>
-          <p class="advantages-description">Все достопримечательности находятся очень близко</p>
+          <h3>Небольшая площадь</h3>
+          <p>Все достопримечательности находятся очень близко</p>
         </li>
         <li class="advantages-item advantages-item-background">
-          <h3 class="advantages-title">Красивая дорога</h3>
-          <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          <h3>Красивая дорога</h3>
+          <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
         </li>
         <li class="advantages-item">
-          <h3 class="advantages-title">Мало туристов</h3>
-          <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
+          <h3>Мало туристов</h3>
+          <p>Большинство едет в Гранд Каньон и толпится там</p>
         </li>
       </ul>
       <article class="blog-article blog-article-2">
-        <h3 class="blog-article-title">Там есть мост дьявола</h3>
-        <p class="blog-article-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+        <h3>Там есть мост дьявола</h3>
+        <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
         </div>
         <img class="blog-article-img" alt="Пейзаж Седоны" src="images/article-2.jpg" width="800" height="385">
       </article>
@@ -91,31 +91,29 @@
       <h2 class="visually-hidden">Больше преимуществ</h2>
       <ul class="advantages">
         <li class="advantages-item advantages-item-background">
-          <h3 class="advantages-title">Жильё</h3>
-          <p class="advantages-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+          <h3>Жильё</h3>
+          <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
         </li>
         <li class="advantages-item">
-          <h3 class="advantages-title">Еда</h3>
-          <p class="advantages-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+          <h3>Еда</h3>
+          <p>Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
         </li>
         <li class="advantages-item advantages-item-background">
-          <h3 class="advantages-title">Сувениры</h3>
-          <p class="advantages-description">Не только китайского, но и настоящего местного производства!</p>
+          <h3>Сувениры</h3>
+          <p>Не только китайского, но и настоящего местного производства!</p>
         </li>
       </ul>
       <section class="suggestion">
         <h2>Заинтересовались?</h2>
         <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <a class="registration" href="#">
-          <span class="regestration-text">Поиск гостиницы в Седоне</span>
-        </a>
+        <a class="registration button" href="#">Поиск гостиницы в Седоне</a>
       </section>
       <section class="newsletter">
-        <h2 class="newsletter-title">Подпишитесь на рассылку</h2>
-        <p class="newsletter-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
+        <h2>Подпишитесь на рассылку</h2>
+        <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
           <input type="email" id="newsletter-mail" name="newsletter-mail" placeholder="Ваш e-mail">
-          <button class="newsletter-button" type="submit">Подписаться</button>
+          <button class="newsletter-button button" type="submit">Подписаться</button>
         </form>
       </section>
     </main>
