Центрирует разметку по центру

--- a/index.html
+++ b/index.html
@@ -9,138 +9,139 @@
   </head>
 
   <body>
-    <header class="page-header">
-      <nav class="navigation">
-        <a class="logo" href="#">
-          <img class="navigation-logo" alt="Логотип небольшого городка «Седона»" src="images/logo.svg" width="138" height="64">
-        </a>
-        <ul class="navigation-list">
-          <li class="navigation-item">
-            <a class="navigation-link navigation-link-current" href="#">Главная</a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="about.html">О Седоне</a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="catalog.html">Гостиницы</a>
-          </li>
-        </ul>
-        <ul class="navigation-list navigation-user">
-          <li class="navigation-item">
-            <a class="navigation-link" href="#">
-              <span class="visually-hidden">
-                Поиск
-              </span>
-            </a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="#">
-              <span class="visually-hidden">
-                Избранные
-              </span>
-            </a>
-          </li>
-          <li class="navigation-booking">
-            <a class="booking button" href="#">
-              Хочу сюда!
-            </a>
-          </li>
-        </ul>
-      </nav>
-    </header>
+    <div class="page-container">
+      <header class="page-header">
+        <nav class="navigation">
+          <a class="logo" href="#">
+            <img class="navigation-logo" alt="Логотип небольшого городка «Седона»" src="images/logo.svg" width="138" height="64">
+          </a>
+          <ul class="navigation-list">
+            <li class="navigation-item">
+              <a class="navigation-link navigation-link-current" href="#">Главная</a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link" href="about.html">О Седоне</a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link" href="catalog.html">Гостиницы</a>
+            </li>
+          </ul>
+          <ul class="navigation-list navigation-user">
+            <li class="navigation-item">
+              <a class="navigation-link" href="#">
+                <span class="visually-hidden">
+                  Поиск
+                </span>
+              </a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link" href="#">
+                <span class="visually-hidden">
+                  Избранные
+                </span>
+              </a>
+            </li>
+            <li class="navigation-booking">
+              <a class="booking button" href="#">
+                Хочу сюда!
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </header>
 
-    <main class="page-main">
-      <div class="preview-background">
-        <h1 class="visually-hidden">Туризм по городу «Седона»</h1>
-        <img alt="welcome to the gorgeous Sedona"src="images/preview-header.svg" width="458" height="352">
-      </div>
-      <article class="greeting">
-        <h2>Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
-        <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
-      </article>
-      <article class="blog-article blog-article-1">
-        <h3>Настоящий городок</h3>
-        <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-        <img class="blog-article-img" alt="Городок Седона" src="images/article-1.jpg" width="800" height="385">
-      </article>
-      <h2 class="visually-hidden">Преимущества</h2>
-      <ul class="advantages">
-        <li class="advantages-item">
-          <h3>Небольшая площадь</h3>
-          <p>Все достопримечательности находятся очень близко</p>
-        </li>
-        <li class="advantages-item advantages-item-background">
-          <h3>Красивая дорога</h3>
-          <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-        </li>
-        <li class="advantages-item">
-          <h3>Мало туристов</h3>
-          <p>Большинство едет в Гранд Каньон и толпится там</p>
-        </li>
-      </ul>
-      <article class="blog-article blog-article-2">
-        <h3>Там есть мост дьявола</h3>
-        <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+      <main class="page-main">
+        <div class="preview-background">
+          <h1 class="visually-hidden">Туризм по городу «Седона»</h1>
+          <img alt="welcome to the gorgeous Sedona"src="images/preview-header.svg" width="458" height="352">
         </div>
-        <img class="blog-article-img" alt="Пейзаж Седоны" src="images/article-2.jpg" width="800" height="385">
-      </article>
-      <article class="greeting">
-        <h2 class="greeting-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
-        <p class="greeting-description">Опытный персонал и качественное обслуживание!</p>
-      </article>
-      <h2 class="visually-hidden">Больше преимуществ</h2>
-      <ul class="advantages">
-        <li class="advantages-item advantages-item-background">
-          <h3>Жильё</h3>
-          <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
-        </li>
-        <li class="advantages-item">
-          <h3>Еда</h3>
-          <p>Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
-        </li>
-        <li class="advantages-item advantages-item-background">
-          <h3>Сувениры</h3>
-          <p>Не только китайского, но и настоящего местного производства!</p>
-        </li>
-      </ul>
-      <section class="suggestion">
-        <h2>Заинтересовались?</h2>
-        <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <a class="registration button" href="#">Поиск гостиницы в Седоне</a>
-      </section>
-      <section class="newsletter">
-        <h2>Подпишитесь на рассылку</h2>
-        <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
-        <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
-          <input type="email" id="newsletter-mail" name="newsletter-mail" placeholder="Ваш e-mail">
-          <button class="newsletter-button button" type="submit">Подписаться</button>
-        </form>
-      </section>
-    </main>
+        <article class="greeting">
+          <h2>Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
+          <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+        </article>
+        <article class="blog-article blog-article-1">
+          <h3>Настоящий городок</h3>
+          <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+          <img class="blog-article-img" alt="Городок Седона" src="images/article-1.jpg" width="800" height="385">
+        </article>
+        <h2 class="visually-hidden">Преимущества</h2>
+        <ul class="advantages">
+          <li class="advantages-item">
+            <h3>Небольшая площадь</h3>
+            <p>Все достопримечательности находятся очень близко</p>
+          </li>
+          <li class="advantages-item advantages-item-background">
+            <h3>Красивая дорога</h3>
+            <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          </li>
+          <li class="advantages-item">
+            <h3>Мало туристов</h3>
+            <p>Большинство едет в Гранд Каньон и толпится там</p>
+          </li>
+        </ul>
+        <article class="blog-article blog-article-2">
+          <h3>Там есть мост дьявола</h3>
+          <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+          <img class="blog-article-img" alt="Пейзаж Седоны" src="images/article-2.jpg" width="800" height="385">
+        </article>
+        <article class="greeting">
+          <h2 class="greeting-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
+          <p class="greeting-description">Опытный персонал и качественное обслуживание!</p>
+        </article>
+        <h2 class="visually-hidden">Больше преимуществ</h2>
+        <ul class="advantages">
+          <li class="advantages-item advantages-item-background">
+            <h3>Жильё</h3>
+            <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+          </li>
+          <li class="advantages-item">
+            <h3>Еда</h3>
+            <p>Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+          </li>
+          <li class="advantages-item advantages-item-background">
+            <h3>Сувениры</h3>
+            <p>Не только китайского, но и настоящего местного производства!</p>
+          </li>
+        </ul>
+        <section class="suggestion">
+          <h2>Заинтересовались?</h2>
+          <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+          <a class="registration button" href="#">Поиск гостиницы в Седоне</a>
+        </section>
+        <section class="newsletter">
+          <h2>Подпишитесь на рассылку</h2>
+          <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
+          <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
+            <input type="email" id="newsletter-mail" name="newsletter-mail" placeholder="Ваш e-mail">
+            <button class="newsletter-button button" type="submit">Подписаться</button>
+          </form>
+        </section>
+      </main>
 
-    <footer class="page-footer">
-      <ul class="social-list">
-        <li class="social-item">
-          <a class="social-button" href="#">
-            <span class="visually-hidden">Вконтакте</span>
-          </a>
-        </li>
-        <li class="social-item">
-          <a class="social-button" href="#">
-            <span class="visually-hidden">Телеграм</span>
-          </a>
-        </li>
-        <li class="social-item">
-          <a class="social-button" href="#">
-            <span class="visually-hidden">Ютуб</span>
-          </a>
-        </li>
-      </ul>
-      <a class="footer-contacts-address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-      <a href="https://htmlacademy.ru/">
-        <img class="footer-logo-copyright" alt="Логотип создателя вёрстки" src="images/logo-htmlacademy.svg" width="115" height="33">
-      </a>
-    </footer>
+      <footer class="page-footer">
+        <ul class="social-list">
+          <li class="social-item">
+            <a class="social-button" href="#">
+              <span class="visually-hidden">Вконтакте</span>
+            </a>
+          </li>
+          <li class="social-item">
+            <a class="social-button" href="#">
+              <span class="visually-hidden">Телеграм</span>
+            </a>
+          </li>
+          <li class="social-item">
+            <a class="social-button" href="#">
+              <span class="visually-hidden">Ютуб</span>
+            </a>
+          </li>
+        </ul>
+        <a class="footer-contacts-address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+        <a href="https://htmlacademy.ru/">
+          <img class="footer-logo-copyright" alt="Логотип создателя вёрстки" src="images/logo-htmlacademy.svg" width="115" height="33">
+        </a>
+      </footer>
+    </div>
   </body>
 
 </html>
