--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <header class="page-header">
         <nav class="navigation">
           <a class="logo" href="#">
-            <img class="navigation-logo" alt="Логотип небольшого городка «Седона»" src="images/logo.svg" width="138" height="64">
+            <img class="navigation-logo" alt="Логотип небольшого городка «Седона»" src="images/logo.svg" width="140" height="70">
           </a>
           <ul class="navigation-list">
             <li class="navigation-item">
@@ -50,10 +50,10 @@
         </nav>
       </header>
 
-      <main class="page-main">
+      <main class="page-main main-container">
         <div class="preview-background">
           <h1 class="visually-hidden">Туризм по городу «Седона»</h1>
-          <img alt="welcome to the gorgeous Sedona"src="images/preview-header.svg" width="458" height="352">
+          <img class="preview-sedona" alt="welcome to the gorgeous Sedona"src="images/preview-header.svg" width="458" height="352">
         </div>
         <article class="greeting">
           <h2>Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
