--- a/index.html
+++ b/index.html
@@ -56,63 +56,73 @@
           <img class="preview-sedona" alt="welcome to the gorgeous Sedona"src="images/preview-header.svg" width="458" height="352">
         </div>
         <article class="greeting">
-          <h2>Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
+          <h2>Седона — небольшой городок в Аризоне,<br> заслуживающий большего!</h2>
           <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
         </article>
-        <article class="blog-article blog-article-1">
-          <h3>Настоящий городок</h3>
-          <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+        <article class="blog-article">
+          <div class="blog-article-description">
+            <h3>Настоящий городок</h3>
+            <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+          </div>
           <img class="blog-article-img" alt="Городок Седона" src="images/article-1.jpg" width="800" height="385">
         </article>
         <h2 class="visually-hidden">Преимущества</h2>
         <ul class="advantages">
           <li class="advantages-item">
-            <h3>Небольшая площадь</h3>
+            <h3>Небольшая<br>площадь</h3>
             <p>Все достопримечательности находятся очень близко</p>
           </li>
           <li class="advantages-item advantages-item-background">
-            <h3>Красивая дорога</h3>
+            <h3>Красивая<br> дорога</h3>
             <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </li>
           <li class="advantages-item">
-            <h3>Мало туристов</h3>
+            <h3>Мало<br> туристов</h3>
             <p>Большинство едет в Гранд Каньон и толпится там</p>
           </li>
         </ul>
         <article class="blog-article blog-article-2">
-          <h3>Там есть мост дьявола</h3>
-          <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+          <div class="blog-article-description">
+            <h3>Там есть мост дьявола</h3>
+            <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+          </div>
           <img class="blog-article-img" alt="Пейзаж Седоны" src="images/article-2.jpg" width="800" height="385">
         </article>
-        <article class="greeting">
-          <h2 class="greeting-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
+        <article class="greeting greeting-2">
+          <h2 class="greeting-title">Приезжайте в Седону отдохнуть <br>в комфорте и уюте!</h2>
           <p class="greeting-description">Опытный персонал и качественное обслуживание!</p>
         </article>
         <h2 class="visually-hidden">Больше преимуществ</h2>
         <ul class="advantages">
-          <li class="advantages-item advantages-item-background">
-            <h3>Жильё</h3>
-            <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+          <li class="advantages-item-icons advantages-item-background">
+            <div class="advantages-description-wrapper advantage-icon-habitation">
+              <h3>Жильё</h3>
+              <p>Рекомендуем пожить <br>в настоящем мотеле, <br>всё как в кино!</p>
+            </div>
           </li>
-          <li class="advantages-item">
-            <h3>Еда</h3>
-            <p>Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+          <li class="advantages-item-icons">
+            <div class="advantages-description-wrapper advantage-icon-food">
+              <h3>Еда</h3>
+              <p>Всегда заказывайте <br>топовый фирменный бургер, <br>вы не разочаруетесь!</p>
+            </div>
           </li>
-          <li class="advantages-item advantages-item-background">
-            <h3>Сувениры</h3>
-            <p>Не только китайского, но и настоящего местного производства!</p>
+          <li class="advantages-item-icons advantages-item-background">
+            <div class="advantages-description-wrapper advantage-icon-present">
+              <h3>Сувениры</h3>
+              <p>Не только китайского, но и настоящего местного производства!</p>
+            </div>
           </li>
         </ul>
         <section class="suggestion">
           <h2>Заинтересовались?</h2>
-          <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+          <p>Укажите предполагаемые даты поездки, <br>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
           <a class="registration button" href="#">Поиск гостиницы в Седоне</a>
         </section>
         <section class="newsletter">
           <h2>Подпишитесь на рассылку</h2>
-          <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
+          <p>Только полезная информация и никакого спама, <br>честное бойскаутское!</p>
           <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
-            <input type="email" id="newsletter-mail" name="newsletter-mail" placeholder="Ваш e-mail">
+            <input class="newsletter-text" type="email" id="newsletter-mail" name="newsletter-mail" placeholder="Ваш e-mail">
             <button class="newsletter-button button" type="submit">Подписаться</button>
           </form>
         </section>
